RESOLVED FIXED280990
RELEASE_ASSERT that ImageIO could install all the supported image decoders
https://bugs.webkit.org/show_bug.cgi?id=280990
Summary RELEASE_ASSERT that ImageIO could install all the supported image decoders
Said Abou-Hallawa
Reported 2024-10-07 11:33:47 PDT
setImageSourceAllowableTypes() needs to check the return value of CGImageSourceSetAllowableTypes(). If CGImageSourceSetAllowableTypes() could not install all the supported image decoders for any reason, we should halt the process launch and fail its creation safely.
Attachments
Said Abou-Hallawa
Comment 1 2024-10-07 11:34:59 PDT
Said Abou-Hallawa
Comment 2 2024-10-07 17:35:08 PDT
EWS
Comment 3 2024-10-08 14:57:54 PDT
Committed 284850@main (71298373ddac): <https://commits.webkit.org/284850@main> Reviewed commits have been landed. Closing PR #34813 and removing active labels.
WebKit Commit Bot
Comment 4 2024-10-11 18:15:00 PDT
Re-opened since this is blocked by bug 281354
Said Abou-Hallawa
Comment 5 2025-01-29 18:41:52 PST
EWS
Comment 6 2025-01-30 21:39:26 PST
Committed 289593@main (97223465600a): <https://commits.webkit.org/289593@main> Reviewed commits have been landed. Closing PR #39740 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.